[package]
name = "robma_builder"
description = "My result of the builder exercise in proc-macro-workshop by David Tolnay."
version = "0.0.1"
edition = "2018"
autotests = false
license = "MIT OR Apache-2.0"
keywords = ["exercise", "proc-macro", "builder", "do_not_use"]

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
quote = "1.0.7"
proc-macro2 = "1.0"

[dependencies.syn]
version = "1.0.31"
features = ["extra-traits"]

